undo camelCase
